# mrftest-old

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  CMakeLists.txt  config.xml  main.cpp  main.h
software/: CMakeLists.txt  Doxyfile  Makefile  build_id.cpp  config.xml  cppcheck.suppress  crc16.cpp  fbuart.cpp  getcore.cpp  main.cpp  main.h  mrfcap.cpp  project.mk  rxdata.cpp  sdutil.cpp  shared_util  steptest.cpp  style.txt  uncrustify-exceptions.patch  uncrustify.cfg  xbeeconfig.cpp  xbeerconfig.cpp
software/ai/: ai.cpp  ai.h  flags.cpp  flags.h  logger.cpp  logger.h  main.cpp  navigator.cpp  navigator.h  param.cpp  param.h  param_panel.cpp  param_panel.h  role.cpp  role.h  setup.cpp  setup.h  strategy.cpp  strategy.h  tactic.cpp  tactic.h  util.cpp  util.h  window.cpp  window.h
software/autoref/: app_main.cpp  autoref.cpp  autoref.h  param.cpp  param_panel.h  setup.cpp  setup.h
software/cmake_binary_builders/: ai.cmake  buildid.cmake  getcore.cmake  hall2phase.cmake  log.cmake  mrfcap.cmake  mrftest.cmake  nulltest.cmake  sdutil.cmake  software_test.cmake
software/cmake_tools/: add_exe.cmake  ai.cmake  buildid.cmake  create_binary.cmake  get_packages.cmake  getcore.cmake  hall2phase.cmake  log.cmake  mrfcap.cmake  mrftest.cmake  nulltest.cmake  sdutil.cmake  search.cmake  software_definitions.cmake  software_test.cmake
software/config/: main.cpp  window.cpp  window.h
software/configeditor/: main.cpp  window.cpp  window.h
software/convertlog/: main.cpp
software/cppunit/: main.cpp
software/dongle_binaries/: build.sh
software/drive/: dongle.cpp  dongle.h  primitive.cpp  primitive.h  robot.cpp  robot.h
software/experiment/: main.cpp
software/firmware/: 2015-10-24 Demystifying the Thunderbots Firmware.odp  bootproto.cpp  bootproto.h  claim.cpp  claim.h  crc16.cpp  crc16.h  emergency_erase.cpp  emergency_erase.h  fpga.cpp  fpga.h  main.cpp  pic.cpp  pic.h  scheduler.cpp  scheduler.h  upload.cpp  upload.h  watchable_operation.h  watchable_pair.cpp  watchable_pair.h  window.cpp  window.h
software/fw/: bootproto.cpp  bootproto.h  claim.cpp  claim.h  emergency_erase.cpp  emergency_erase.h  fb.cpp  fb.h  fpga.cpp  fpga.h  ihex.cpp  ihex.h  main.cpp  mrf.cpp  mrf.h  pic.cpp  pic.h  pk2.cpp  pk2.h  watchable_operation.h  watchable_pair.cpp  watchable_pair.h  window.cpp  window.h  xbee.cpp  xbee.h
software/geom/: angle.cpp  angle.h  cm_util.cpp  cm_util.h  line.cpp  line.h  param.cpp  param.h  point.cpp  point.h  predictor.cpp  predictor.h  rect.cpp  rect.h  seg.cpp  seg.h  shapes.h  util.cpp  util.h
software/hall2phase/: main.cpp
software/leastsquares/: ap.cpp  ap.h  bdsvd.cpp  bidiagonal.cpp  blas.cpp  leastsquares.cpp  lq.cpp  qr.cpp  reflections.cpp  rotations.cpp  spline3.cpp  svd.cpp
software/log/: analyzer.cpp  analyzer.h  launcher.cpp  launcher.h  loader.cpp  loader.h  main.cpp  player.cpp  player.h  writer.cpp  writer.h
software/mrf/: constants.cpp  constants.h  dongle.cpp  dongle.h  packet_logger.cpp  packet_logger.h  robot.cpp  robot.h
software/mrfcap/: main.cpp
software/mrfdbg/: main.cpp
software/mrftest/: drive.cpp  drive.h  feedback.cpp  feedback.h  kicker.cpp  kicker.h  launcher.cpp  launcher.h  leds.cpp  leds.h  main.cpp  mapper.cpp  mapper.h  mapping.cpp  mapping.h  params.cpp  params.h  window.cpp  window.h
software/proto/: log_record.proto
software/robot_controller/: adhoc2_controller.cpp  fuzzy_controller.cpp  fuzzy_controller.h  gpc.cpp  gpc.h  jons_controller.cpp  jons_controller.h  lazy_controller.cpp  lazy_controller.h  linear_controller.cpp  linear_controller.h  max_power_controller.cpp  max_power_controller.h  pid_controller.cpp  pid_controller.h  robot_controller.cpp  robot_controller.h  testing_rc.cpp  tunable_adhoc_controller.cpp  tunable_controller.cpp  tunable_controller.h  tunable_pid_controller.cpp  tunable_pid_controller.h
software/robot_controller_test/: main.cpp  player.cpp  player.h  testing_rc.cpp  testing_rc.h
software/sim/: autoref.h  ball.cpp  ball.h  engine.h  field.h  main.cpp  main_window.cpp  main_window.h  player.h  robot.cpp  robot.h  simulator.cpp  simulator.h  team.cpp  team.h  visdata.cpp  visdata.h  window.cpp  window.h
software/simulator/: Pal Report.txt.txt  autoref.cpp  autoref.h  ball.cpp  ball.h  collisionless_kinematic.cpp  connection.cpp  connection.h  engine.cpp  engine.h  field.cpp  field.h  main.cpp  main_window.cpp  main_window.h  player.h  robot.cpp  robot.h  simulator.cpp  simulator.h  team.cpp  team.h  visdata.cpp  visdata.h  window.cpp  window.h
software/src/: CMakeLists.txt  Thunderbots.cpp
software/step_test/: test.cpp
software/style/: style.html  style.md
software/test/: chicker.cpp  chicker.h  controlled_permotor_drive.h  direct_drive.h  drive.cpp  drive.h  feedback.cpp  feedback.h  kicker.cpp  kicker.h  launcher.cpp  launcher.h  main.cpp  mapper.cpp  mapper.h  mapping.cpp  mapping.h  matrix_drive.cpp  matrix_drive.h  params.cpp  params.h  permotor_drive.cpp  permotor_drive.h  window.cpp  window.h  zeroable.h
software/tester/: controlled_permotor_drive.h  controls.h  direct_drive.cpp  direct_drive.h  feedback.cpp  feedback.h  main.cpp  matrix_drive.cpp  matrix_drive.h  permotor_drive.cpp  permotor_drive.h  window.cpp  window.h  zeroable.h
software/uicomponents/: abstract_list_model.cpp  abstract_list_model.h  annunciator.cpp  annunciator.h  battery_meter.cpp  battery_meter.h  bot_chooser.cpp  bot_chooser.h  dribbler_meter.cpp  dribbler_meter.h  feedback_interval_meter.cpp  feedback_interval_meter.h  inbound_rssi_meter.cpp  inbound_rssi_meter.h  latency_meter.cpp  latency_meter.h  light.cpp  light.h  outbound_rssi_meter.cpp  outbound_rssi_meter.h  param.cpp  param.h  rssi_meter.h  run_data_interval_meter.cpp  run_data_interval_meter.h  single_bot_combobox.cpp  single_bot_combobox.h  success_meter.cpp  success_meter.h  visualizer.cpp  visualizer.h  world_add_bot_dialog.cpp  world_add_bot_dialog.h
software/util/: abstract_list_model.cpp  abstract_list_model.h  algorithm.h  annunciator.cpp  annunciator.h  args.cpp  args.h  async_operation.h  bit_array.h  (+107 more)
(+2181 files in other folders)
